--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,65 @@
+body {
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
 .connect-menu img {
-	width: 30px;
-	height: 30px;
+	width: 30%;
+	height: 30%;
+	display: inline;
+}
+.clearfix::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+header {
+	height: 10%;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+h1 {
+	background-color: #4aaaa5;
+	color: white;
+	display: block;
+	width: 20%;
+	font-size: 2em;
+	border-color: #ffffff;
+	padding: 1% 2%;
+	margin: 1% 3% 0% 3%;
+}
+h2, h3 {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+h2 {
+	font-size: 2em;
+}
+h3 {
+	font-size: 1.5em;
+}
+div.main-content {
+	background-color: grey;
+	padding: 9px;
+	display: flex;
+	justify-content: space-between;
+	height: 80%;
+}
+nav {
+	float: right;
+	display: flex;
+	justify-content: space-between;
+	width: 40%;
+	padding: 8% 0% 1% 1%;
+}
+section {
+	background-color: white;
+	width: 60%;
+	padding: 2% 0% 2% 3%;
+}
+aside {
+	background-color: white;
+	width: 25%;
+	height: 100%;
+	padding: 2% 1% 1% 1%;
 }
