--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-color: #dee3ea;
 }
 .connect-menu img {
 	width: 30%;
@@ -17,6 +18,7 @@ header {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	background-color: white;
 }
 h1 {
 	background-color: #4aaaa5;
@@ -39,7 +41,6 @@ h3 {
 	font-size: 1.5em;
 }
 div.main-content {
-	background-color: grey;
 	padding: 9px;
 	display: flex;
 	justify-content: space-between;
@@ -52,6 +53,19 @@ nav {
 	width: 40%;
 	padding: 8% 0% 1% 1%;
 }
+nav > a {
+	color: #6a6b6d;
+	text-align: center;
+/*	display: flex;
+	justify-content: center;*/
+	height: auto;
+}
+/*nav > a:first-child ~ a {
+	border-left: 2px solid #dee3ea;
+	border-right: 2px solid #dee3ea;
+	padding-left: 2px;
+	margin-left: 8px;
+}*/
 section {
 	background-color: white;
 	width: 60%;
@@ -62,4 +76,14 @@ aside {
 	width: 25%;
 	height: 100%;
 	padding: 2% 1% 1% 1%;
+}
+footer {
+	background-color: #6a6b6d;
+	color: #dee3ea;
+	text-align: center;
+	display: block;
+	height: 20%;
+	width: 100%;
+	border-top: 0.5em solid #4aaaa5;
+	padding: 3% 0%;
 }
