--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,20 +19,24 @@ header {
 	display: flex;
 	justify-content: space-between;
 	background-color: white;
+	position: fixed;
+	top: 0%;
 }
 h1 {
 	background-color: #4aaaa5;
 	color: white;
+	text-align: center;
 	display: block;
-	width: 20%;
+	width: 30%;
 	font-size: 2em;
 	border-color: #ffffff;
-	padding: 1% 2%;
-	margin: 1% 3% 0% 3%;
+	padding: 2% 2%;
+	margin: 0% 2% 0% 2%;
 }
 h2, h3 {
 	color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	border-bottom: 2px solid #dee3ea;
 }
 h2 {
 	font-size: 2em;
@@ -40,18 +44,24 @@ h2 {
 h3 {
 	font-size: 1.5em;
 }
+main {
+	margin-top: 12%;
+	margin-bottom: 15%;
+}
 div.main-content {
-	padding: 9px;
+	padding: 2%;
 	display: flex;
 	justify-content: space-between;
 	height: 80%;
+/*	overflow: scroll;*/
+	overflow-y: scroll;
 }
 nav {
 	float: right;
 	display: flex;
 	justify-content: space-between;
 	width: 40%;
-	padding: 8% 0% 1% 1%;
+	padding: 3% 0% 3% 1%;
 }
 nav > a {
 	color: #6a6b6d;
@@ -69,7 +79,13 @@ nav > a {
 section {
 	background-color: white;
 	width: 60%;
-	padding: 2% 0% 2% 3%;
+	padding: 2% 3% 2% 3%;
+} 
+section h2 {
+	margin: 0% 0% 2% 0%;
+}
+section label {
+	display: block;
 }
 aside {
 	background-color: white;
@@ -77,13 +93,29 @@ aside {
 	height: 100%;
 	padding: 2% 1% 1% 1%;
 }
+aside div.logo-links-container {
+	margin: 3% 0%;
+}
 footer {
 	background-color: #6a6b6d;
 	color: #dee3ea;
 	text-align: center;
 	display: block;
-	height: 20%;
+	height: 5%;
 	width: 100%;
 	border-top: 0.5em solid #4aaaa5;
-	padding: 3% 0%;
+	padding: 2% 0%;
+	position: fixed;
+	bottom: 0%;
+	z-index: 5;
+}
+input {
+	margin: 2% 0%;
+}
+input.form-submit {
+	background-color: #4aaaa5;
+	color: white;
+	text-decoration: none;
+	border: none;
+	padding: 1% 3%;
 }
