Got background image to show up, with a background color for a backup. I also added a portrait picture for my website's profile picture.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-image: url("../images/concrete-texture.png");
 	background-color: #dee3ea;
 }
 .connect-menu img {
