--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,11 @@ header {
 	position: fixed;
 	top: 0%;
 	z-index: 5;
+	border-bottom: 2px solid #dddddd;
 }
 h1 {
 	background-color: #4aaaa5;
-	color: white;
+	color: #ffffff;
 	text-align: center;
 	display: block;
 	width: 30%;
@@ -64,7 +65,7 @@ div.portfolio-selection img {
 }
 div.portfolio-selection h4 {
 	background-color: #4aaaa5;
-	color: white;
+	color: #ffffff;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: center;
 	position: relative;
@@ -105,7 +106,7 @@ nav > a {
 	margin-left: 8px;
 }*/
 section {
-	background-color: white;
+	background-color: #ffffff;
 	width: 60%;
 	padding: 2% 3% 2% 3%;
 } 
@@ -116,7 +117,7 @@ section label {
 	display: block;
 }
 aside {
-	background-color: white;
+	background-color: #ffffff;
 	width: 25%;
 	height: 100%;
 	padding: 2% 1% 1% 1%;
